; ModuleID = '/home/carl/AnghaBench/systemd/src/shared/extr_json.c_json_variant_new_unsigned.c'
source_filename = "/home/carl/AnghaBench/systemd/src/shared/extr_json.c_json_variant_new_unsigned.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { %struct.TYPE_7__ }
%struct.TYPE_7__ = type { i64 }

@EINVAL = common dso_local global i32 0, align 4
@JSON_VARIANT_MAGIC_ZERO_UNSIGNED = common dso_local global %struct.TYPE_8__* null, align 8
@JSON_VARIANT_UNSIGNED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @json_variant_new_unsigned(%struct.TYPE_8__** %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_8__**, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.TYPE_8__*, align 8
  %7 = alloca i32, align 4
  store %struct.TYPE_8__** %0, %struct.TYPE_8__*** %4, align 8
  store i64 %1, i64* %5, align 8
  %8 = load %struct.TYPE_8__**, %struct.TYPE_8__*** %4, align 8
  %9 = load i32, i32* @EINVAL, align 4
  %10 = sub nsw i32 0, %9
  %11 = call i32 @assert_return(%struct.TYPE_8__** %8, i32 %10)
  %12 = load i64, i64* %5, align 8
  %13 = icmp eq i64 %12, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %2
  %15 = load %struct.TYPE_8__*, %struct.TYPE_8__** @JSON_VARIANT_MAGIC_ZERO_UNSIGNED, align 8
  %16 = load %struct.TYPE_8__**, %struct.TYPE_8__*** %4, align 8
  store %struct.TYPE_8__* %15, %struct.TYPE_8__** %16, align 8
  store i32 0, i32* %3, align 4
  br label %31

17:                                               ; preds = %2
  %18 = load i32, i32* @JSON_VARIANT_UNSIGNED, align 4
  %19 = call i32 @json_variant_new(%struct.TYPE_8__** %6, i32 %18, i32 8)
  store i32 %19, i32* %7, align 4
  %20 = load i32, i32* %7, align 4
  %21 = icmp slt i32 %20, 0
  br i1 %21, label %22, label %24

22:                                               ; preds = %17
  %23 = load i32, i32* %7, align 4
  store i32 %23, i32* %3, align 4
  br label %31

24:                                               ; preds = %17
  %25 = load i64, i64* %5, align 8
  %26 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %27 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %26, i32 0, i32 0
  %28 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %27, i32 0, i32 0
  store i64 %25, i64* %28, align 8
  %29 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %30 = load %struct.TYPE_8__**, %struct.TYPE_8__*** %4, align 8
  store %struct.TYPE_8__* %29, %struct.TYPE_8__** %30, align 8
  store i32 0, i32* %3, align 4
  br label %31

31:                                               ; preds = %24, %22, %14
  %32 = load i32, i32* %3, align 4
  ret i32 %32
}

declare dso_local i32 @assert_return(%struct.TYPE_8__**, i32) #1

declare dso_local i32 @json_variant_new(%struct.TYPE_8__**, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
